crates/aion-awl/tests/fixtures/rev2/loop-outcomes/invalid/counting_missing_name.awl
//! counting with no name — the counter has nothing to bind to.
workflow poll_job
  input job_id: String
  input max_polls: Int

  outcome finished: type Finished, route success
  outcome timed_out: type TimedOut, route failure

type Poll     { state: String, done: Bool }
type Finished { job_id: String }
type TimedOut { job_id: String }

worker poller
  action poll(job_id: String, prior: Poll) -> Poll
    node shell, timeout 1m

step poll
  loop status = Poll(state: "pending", done: false) counting
    poll(job_id: job_id, prior: status) -> status
    until status.done
    max max_polls

  outcome done: when status.done, route finished(job_id: job_id)
  outcome spent: otherwise, route timed_out(job_id: job_id)
